Added hover effect

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
         <div class="mt-5">
             <img src="../../assets/image/home.png" alt="logo image" class="assign-shake-hand-img img-fluid" width="55%">
         </div>
-        <div class="imageDiv2">
+        <div class="imageDiv">
             <img src="../../assets/image/dots.png" alt="logo image" class="img-fluid" width="75%">
         </div>
     </div>
@@ -55,13 +55,13 @@
                             <div class="pt-2"><label class="assign-slider-label">EMI of existing loan (optional
                                 )</label></div>
                         </div>
-                        <input type="text" class="assign-select" />
+                        <input type="text" class="assign-select" placeholder="₹ 15000" />
                     </div>
                 </div>
             </div>
             <div class="col-md-6 mb-4">
                 <div class="card assign-slider-card-2 mt-5">
-                    <div class="card-body mt-5">
+                    <div class="card-body mt-5 text-center">
                         <div class="mt-4">
                             <label class="assign-slider-card-2-label">Loan Amount</label>
                         </div>
