--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,19 +4,19 @@
     </a>
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 assign-nav-bar-ul">
         <li class="nav-item mr-4">
-            <a class="nav-link text-dark assign-nav-links" href="#">Product </a>
+            <a class="nav-link text-dark assign-nav-links" href="#">Products</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark assign-nav-links" href="#">Solution</a>
+            <a class="nav-link text-dark assign-nav-links" href="#">Solutions</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark assign-nav-links" href="#">Pricing</a>
         </li>
         <li class="nav-item">
-            <button class="btn btn-outline-primary assign-login-btn">Login</button>
+            <button class="btn mybtn btn-outline-primary assign-login-btn">Login</button>
         </li>
         <li class="nav-item">
-            <button class="btn btn-primary assign-get-started-btn">Get started</button>
+            <button class="btn mybtn btn-primary assign-get-started-btn">Get Started</button>
         </li>
     </ul>
 </nav>
