--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,25 +1,25 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-4">
-            <div class="card bg-light ass-card mb-3">
+            <div class="card bg-light ass-card mb-3 ">
                 <img class=" card-img-top ass-card-img" src="../../assets/image/getpaid.png" alt="getpaid">
                 <div class="card-body ass-card-body">
-                    <h5 class="card-title ">Quick cash disbursement</h5>
-                    <p class="card-text ">Get terms loans that your business needs within 72 hrs</p>
+                    <h5 class="card-title ass-card-label ">Quick cash disbursement</h5>
+                    <p class="card-text ass-card-text">Get terms loans that your business needs within 72 hrs</p>
                 </div>
             </div>
-            <div class="card bg-light ass-card mb-3">
+            <div class="card bg-light ass-card mb-3 ">
                 <img class=" card-img-top ass-card-img" src="../../assets/image/lowintrest.png" alt="lowintrest">
                 <div class="card-body ass-card-body">
-                    <h5 class="card-title ">Low-interest rate</h5>
-                    <p class="card-text ">Achieve your financial goals with an amazing interest rate starting at 13% per annum</p>
+                    <h5 class="card-title ass-card-label ">Low-interest rate</h5>
+                    <p class="card-text ass-card-text">Achieve your financial goals with an amazing interest rate starting at 13% PA</p>
                 </div>
             </div>
             <div class="card bg-light ass-card mb-3">
                 <img class=" card-img-top ass-card-img" src="../../assets/image/securepayments.png" alt="securepayments">
                 <div class="card-body ass-card-body">
-                    <h5 class="card-title ">Zero Paperwork</h5>
-                    <p class="card-text ">Get started instantly by submitting only your basic details & bank statements</p>
+                    <h5 class="card-title ass-card-label">Zero Paperwork</h5>
+                    <p class="card-text ass-card-text">Get started instantly by submitting only your basic details & bank statements</p>
                 </div>
             </div>
         </div>
@@ -27,27 +27,27 @@
             <div class="card bg-light ass-card mb-3">
                 <img class=" card-img-top ass-card-img" src="../../assets/image/freelancer.png" alt="freelancer">
                 <div class="card-body ass-card-body">
-                    <h5 class="card-title ">Ace your business finances</h5>
-                    <p class="card-text ">Manage banking, accounting & everything in between, on one platform</p>
+                    <h5 class="card-title ass-card-label ">Ace your business finances</h5>
+                    <p class="card-text ass-card-text">Manage banking, accounting & everything in between, on one platform</p>
                 </div>
             </div>
             <div class="card bg-light ass-card mb-3">
                 <img class=" card-img-top ass-card-img" src="../../assets/image/covid.png" alt="covid">
                 <div class="card-body ass-card-body">
-                    <h5 class="card-title ">Loans to fight COVID-19</h5>
-                    <p class="card-text ">Zero EMI for first 3 months on Back-to-Business loans of upto 1 lakh</p>
+                    <h5 class="card-title ass-card-label ">Loans to fight COVID-19</h5>
+                    <p class="card-text ass-card-text">Zero EMI for first 3 months on Back-to-Business loans of upto 1 lakh</p>
                 </div>
             </div>
         </div>
-        <div class="col-md-4 ">
+        <div class="col-md-4 mt-4">
             <div class="myText">Boost your business</div>
             <div class="myText"><span>with Open</span></div>
             <div class="myBorderText mt-5"></div>
             <div class="mt-3">
-                <div class=""><span> Get your hands on a term loan that’s </span></div>
-                <div class=""><span> crafted for your business</span></div>
+                <div class="mySpan"><span> Get your hands on a term loan that’s </span></div>
+                <div class="mySpan"><span> crafted for your business</span></div>
             </div>
-            <button type="button" class="btn getopenbtn mt-5 p-3">Get an Open Account</button>
+            <button type="button" class="btn mybtn getopenbtn mt-5 p-3">Get an Open Account</button>
         </div>
     </div>
 </div>
