--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -13,9 +13,17 @@
 
 .myText {
     font-family: Montserrat;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 500;
     color: #222222;
+}
+
+.mySpan {
+    color: #777777;
+    font-size: 12px;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    opacity: 100%;
 }
 
 .myBorderText {
@@ -30,11 +38,11 @@
     color: #663399;
     border: 2px solid;
     opacity: 1;
-    box-shadow: 0px 0px 20px #00000033;
-    font-size: 12px;
+    box-shadow: 0px 0px 10px #00000033;
+    font-size: 15px;
     font-family: Montserrat;
     text-align: center;
-    font-weight: bold;
+    font-weight: 500;
     border-radius: 24px;
 }
 
@@ -66,4 +74,27 @@
 .ass-card-body {
     padding-left: 3rem;
     padding-right: 2rem;
+}
+
+.ass-card-label {
+    font-size: 15px;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    opacity: 100%;
+}
+
+.ass-card-text {
+    font-size: 10px;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    opacity: 100%;
+}
+
+.mybtn:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgb(0 0 0 / 12%), 0 4px 8px rgb(0 0 0 / 6%);
+    background-color: #663399 !important;
+    opacity: 1;
+    color: #FFFFFF;
+    border-color: #663399 !important;
 }
