--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -3,6 +3,7 @@
     text-align: left;
     font-family: Open sans;
     font-weight: 600;
+    text-decoration: none;
 }
 
 .assign-nav-bar {
@@ -18,7 +19,7 @@
     color: #663399;
     border: 2px solid;
     opacity: 1;
-    box-shadow: 0px 0px 20px #00000033;
+    box-shadow: 0px 0px 5px #00000033;
     font-size: 12px;
     font-family: Montserrat;
     margin-top: 1.2rem;
@@ -33,12 +34,12 @@
     color: #FFFFFF;
     opacity: 1;
     border: 2px solid;
-    box-shadow: 0px 0px 20px #00000033;
+    box-shadow: 0px 0px 5px #00000033;
     font-size: 12px;
     font-family: Montserrat;
     text-align: center;
     margin-top: 1.2rem;
-    font-weight: 600;
+    font-weight: 500;
     background: transparent linear-gradient(90deg, #9F62C9 0%, #663399 100%) 0% 0% no-repeat padding-box;
     border-radius: 24px;
 }
@@ -54,4 +55,13 @@
 
 .assign-nav-bar-ul {
     margin-right: 7rem;
+}
+
+.mybtn:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgb(0 0 0 / 12%), 0 4px 8px rgb(0 0 0 / 6%);
+    background-color: #663399 !important;
+    opacity: 1;
+    color: #FFFFFF;
+    border-color: #663399 !important;
 }
