--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar fixed-top navbar-expand-lg assign-nav-bar">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand">
         <img src="../../assets/image/logo.png" alt="logo image" class="img-fluid" width="50px" height="50px">
     </a>
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 assign-nav-bar-ul">
         <li class="nav-item mr-4">
-            <a class="nav-link text-dark assign-nav-links" href="#">Products</a>
+            <a class="nav-link text-dark assign-nav-links">Products</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark assign-nav-links" href="#">Solutions</a>
+            <a class="nav-link text-dark assign-nav-links">Solutions</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark assign-nav-links" href="#">Pricing</a>
+            <a class="nav-link text-dark assign-nav-links">Pricing</a>
         </li>
         <li class="nav-item">
             <button class="btn mybtn btn-outline-primary assign-login-btn">Login</button>
