--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 mt-4">
+        <div class="col-md-4 mt-4" style="margin-top: 10rem !important;">
             <div class="myText">Boost your business</div>
             <div class="myText"><span>with Open</span></div>
             <div class="myBorderText mt-5"></div>
